chore: add trigger name and action name when creating the rule
